Fixed URL generation for dynamic class loader and added some logging to faciliate future debugging.